--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "@types/nodemailer": "^6.4.17",
+    "argon2": "^0.44.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
